--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 	<header>
 		<div class="container">
 			<div class="heading clearfix">
-				<img src="img/logo.png" alt="Golden" class="logo">
+				<a href="#">
+					<img src="img/logo.png" alt="Golden" class="logo">
+				</a>
 				<nav>
 					<ul class="menu">
 						<li>
